<resources>
    <string name="app_name">Wong_FinalsMobcom</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="slogan">Adding Moments of Styles</string>
    <string name="proceed_to_login">Proceed to Login</string>
    <string name="btnSignUp">Sign Up Now!</string>
    <string name="emailExample">idnumber@gmail.com</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="exampleNumber">09153698874</string>
    <string name="cPass">Confirm Password</string>
    <string name="examplePass">********</string>
    <string name="send">Send</string>
    <string name="btnRegister">Register</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="exampleFirstName">Android</string>
    <string name="exampleLastName">Studio</string>
    <string name="myProfile">My Profile</string>
    <string name="schedule_an_event_now">Schedule an Event Now</string>
    <string name="btnLogout">Logout</string>
    <string name="to_email">To:</string>
    <string name="event">Event</string>
    <string name="home">Home</string>
    <string name="from_email">From:</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="add_event">Add Event</string>
    <string name="calendar">Calendar</string>
    <string name="calculator">Calculator</string>
    <string name="my_profile">My Profile</string>
    <string name="send_email">Send Email</string>
    <string name="dial">Dial</string>
    <string name="save">Save</string>
    <string name="schedule_event">Schedule an Event</string>
    <string name="update_profile">Update Profile</string>
    <string name="recipients">Recipients</string>
    <string name="end_time">End Time</string>
    <string name="end">End</string>
    <string name="event_name">Event Name</string>
    <string name="_1st_bag_show">1st Bag Show</string>
    <string name="venue">Venue</string>
    <string name="baguio">Baguio</string>
    <string name="schedule">Schedule</string>
    <string name="start_time">Start Time</string>
    <string name="start">Start</string>
    <string name="event_date">Event Date</string>
    <string name="date">Date</string>
    <string name="browse">Browse</string>
    <string name="view">View</string>
    <string name="your_name">Your Name</string>
</resources>