<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EventScheduler">

        <FrameLayout
            android:id="@+id/lblFromSched"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/blue_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backProfile"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/peach"
                tools:ignore="ImageContrastCheck" />


        </FrameLayout>

        <TextView
            android:id="@+id/lblEmailRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="250dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/recipients"
            android:textColor="@color/green_700"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lblEventSchedule"
            app:layout_constraintTop_toBottomOf="@+id/lblEventSchedule" />

        <TextView
            android:id="@+id/lblEventSchedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/event"
            android:textColor="@color/peach"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lblFromSched"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etRecipientsEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/emailExample"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lblEmailRegister"
            app:layout_constraintTop_toBottomOf="@+id/lblEmailRegister"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/end_time"
            android:textColor="@color/green_700"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblFromEmailSchedule"
            app:layout_constraintTop_toTopOf="@+id/lblFromEmailSchedule" />

        <EditText
            android:id="@+id/etEndEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/end"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/etStartEvent"
            app:layout_constraintTop_toBottomOf="@+id/lblFromEmailSchedule" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/event_name"
            android:textColor="@color/green_700"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/etRecipientsEvent"
            app:layout_constraintStart_toStartOf="@+id/lblEmailRegister"
            app:layout_constraintTop_toBottomOf="@+id/etRecipientsEvent" />

        <TextView
            android:id="@+id/tvDateEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/event_date"
            android:textColor="@color/green_700"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/etEventNameEvent" />

        <EditText
            android:id="@+id/etEventNameEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_1st_bag_show"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/etEndEvent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etEventNameEvent2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Date"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/etEndEvent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tvDateEvent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/venue"
            android:textColor="@color/green_700"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/etStartEvent" />

        <EditText
            android:id="@+id/etVenueEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/baguio"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/etEventNameEvent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/etStartEvent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/btnScheduleEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:ems="7"
            android:text="@string/schedule"
            app:layout_constraintEnd_toStartOf="@+id/btnLogoutEvent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etVenueEvent" />

        <Button
            android:id="@+id/btnLogoutEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="70dp"
            android:ems="7"
            android:text="@string/btnLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnScheduleEvent"
            app:layout_constraintTop_toTopOf="@+id/btnScheduleEvent" />

        <TextView
            android:id="@+id/lblFromEmailSchedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/start_time"
            android:textColor="@color/green_700"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEventNameEvent2" />

        <EditText
            android:id="@+id/etStartEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/start"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/lblFromEmailSchedule"
            app:layout_constraintTop_toBottomOf="@+id/lblFromEmailSchedule"
            android:autofillHints="" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>