<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_bg"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UserProfileActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backProfile"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/peach"
            tools:ignore="ImageContrastCheck" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/imgProfileProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user_profile" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="0dp"
                    android:src="@drawable/ic_upload"
                    app:layout_constraintEnd_toStartOf="@+id/imgProfileProfile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white"
                    tools:layout_editor_absoluteY="50dp" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvNameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/exampleFirstName"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvlblEmailProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email"
            android:textColor="@color/peach"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/tvFNameProfile"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailProfile2"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvFNameProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/firstName"
            android:textColor="@color/peach"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/tvFNameProfile2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameProfile"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvFNameProfile2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/lastName"
            android:textColor="@color/peach"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvFNameProfile"
            app:layout_constraintTop_toTopOf="@+id/tvFNameProfile"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lblPhoneNumberProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/mobileNumber"
            android:textColor="@color/peach"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/tvlblEmailProfile"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailProfile"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/tvEmailProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/emailExample"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvlblEmailProfile"
            app:layout_constraintTop_toBottomOf="@+id/tvlblEmailProfile"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/tvEmailProfile2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/exampleFirstName"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvFNameProfile"
            app:layout_constraintTop_toBottomOf="@+id/tvFNameProfile"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/tvEmailProfile3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:hint="@string/exampleLastName"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tvFNameProfile"
            app:layout_constraintTop_toTopOf="@+id/tvEmailProfile2"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/tvNumberProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/exampleNumber"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvEmailProfile"
            app:layout_constraintTop_toBottomOf="@+id/lblPhoneNumberProfile"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnLogoutProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnLogout"
            app:layout_constraintEnd_toStartOf="@+id/btnView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNumberProfile"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="View"
            app:layout_constraintEnd_toStartOf="@+id/btnSaveProfile"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnLogoutProfile"
            app:layout_constraintTop_toTopOf="@+id/btnLogoutProfile"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnView"
            app:layout_constraintTop_toTopOf="@+id/btnLogoutProfile"
            tools:ignore="TextContrastCheck,TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>