<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="220dp"
                android:layout_height="730dp"
                android:background="@drawable/bg">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/logo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="250dp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingStart="10dp"
                    android:text="@string/slogan"
                    android:textColor="@color/peach"
                    android:textSize="35sp"
                    tools:ignore="RtlSymmetry" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="190dp"
                android:layout_height="730dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/bag1" />
                <Button
                    android:id="@+id/btnProceed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="520dp"
                    android:text="@string/proceed_to_login"
                    android:textColor="@color/peach"
                    android:textSize="25sp" />
            </FrameLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView
    >